--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -48,6 +48,7 @@
     /* Grey */
     --color-grey-50: #fafafa;
     --color-grey-100: #f5f5f5;
+    --color-grey-background: #F2F2F6;
     --color-grey-200: #eeeeee;
     --color-grey-300: #e0e0e0;
     --color-grey-400: #bdbdbd;
@@ -55,6 +56,7 @@
     --color-grey-600: #757575;
     --color-grey-700: #616161;
     --color-grey-800: #424242;
+
     --color-grey-900: #212121;
 
     /* Red */
@@ -164,6 +166,7 @@
     --chart-4: hsl(43 74% 66%);
     --chart-5: hsl(27 87% 67%);
     --radius: 0.5rem;
+    --panel-radius: 0.75rem;
   }
 
   .dark {
