--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -58,6 +58,26 @@
   }
 
   :root {
+    --color-primary: #2A3EDC;
+    --color-primary-hover: #3A4CDF;
+    --color-primary-soft: #EDEFFC;
+
+    --color-bg: #F6F7FF;
+    --color-surface: #FFFFFF;
+    --color-surface-alt: #EDEFFC;
+    --color-border: 197, 204, 255;
+
+    --text-on-light-primary: hsl(233, 72%, 20%);
+    --text-on-light-primary-bg: hsl(233, 72%, 98%);
+    --text-on-light-secondary: #162283;
+    --text-on-light-muted: #7C88E9;
+
+    --text-on-primary: #FFFFFF;
+
+    --btn-disabled-bg: #D3D7F8;
+    --btn-disabled-text: #A7B0F1;
+
+
     /* Grey */
     --color-grey-50: #fafafa;
     --color-grey-100: #f5f5f5;
@@ -122,9 +142,10 @@
 
     // Primary Blue Shades
     --color-primary-darkest: #2a3edc; // darkest shade
+    --color-primary-disabled: #4a6768; // darkest shade
     --color-primary-darker: #3f54f0;
     --color-primary-dark: #4a63fd;
-    --color-primary: #536DFE; // base
+    --color-primary-old: #536DFE; // base
     --color-primary-light: #677bff;
     --color-primary-lighter: #8492ff;
     --color-primary-lightest: #a0aaff;
@@ -183,6 +204,25 @@
   }
 
   .dark {
+    --color-primary: #2A3EDC;
+    --color-primary-hover: #3A4CDF;
+    --color-primary-soft: #192899;
+
+    --color-bg: #060923;
+    --color-surface: #090E35;
+    --color-surface-alt: #0C1246;
+    --color-border: #192899;
+
+    --text-on-dark-primary: #EDEFFC;
+    --text-on-dark-secondary: #A7B0F1;
+    --text-on-dark-muted: #7C88E9;
+
+    --text-on-primary: #FFFFFF;
+
+    --btn-disabled-bg: #192899;
+    --btn-disabled-text: #4B55B2;
+
+
     --background: hsl(0 0% 3.9%);
     --foreground: hsl(0 0% 98%);
     --card: hsl(0 0% 3.9%);
