--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -70,12 +70,12 @@
     --color-accent-hover: 147 51 234; /* purple-600 */
     --color-accent-foreground: 255 255 255; /* white */
 
-    --color-background: 251 251 251; /* white */
+    --color-background: 252 252 252; /* white */
     --color-background-secondary: 248 250 252; /* slate-50 */
     --color-background-tertiary: 241 245 249; /* slate-100 */
     --color-background-hover: 241 245 249; /* slate-100 */
 
-    --color-surface: 251 251 251; /* white */
+    --color-surface: 255 255 255; /* white */
     --color-surface-secondary: 248 250 252; /* slate-50 */
     --color-surface-hover: 241 245 249; /* slate-100 */
 
@@ -126,6 +126,8 @@
     --color-input-border-focus: 59 130 246; /* blue-500 */
     --color-input-text: 15 23 42; /* slate-900 */
     --color-input-placeholder: 148 163 184; /* slate-400 */
+
+    --color-icon: 5 5 5;
 
     --color-shadow: 0 0 0; /* black */
 
