--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -7,40 +7,10 @@
 
 @layer base {
 
-  @font-face {
-    font-family: 'FiraGO';
-    src: url('/fonts/FiraGO-Regular.woff2') format('woff2');
-    font-weight: 400;
-    font-style: normal;
-    font-display: swap;
-  }
 
-  @font-face {
-    font-family: 'FiraGO';
-    src: url('/fonts/FiraGO-Medium.woff2') format('woff2');
-    font-weight: 500;
-    font-style: normal;
-    font-display: swap;
-  }
-
-  @font-face {
-    font-family: 'FiraGO';
-    src: url('/fonts/FiraGO-SemiBold.woff2') format('woff2');
-    font-weight: 600;
-    font-style: normal;
-    font-display: swap;
-  }
-
-  @font-face {
-    font-family: 'FiraGO';
-    src: url('/fonts/FiraGO-Bold.woff2') format('woff2');
-    font-weight: 700;
-    font-style: normal;
-    font-display: swap;
-  }
 
   * {
-    font-family: 'FiraGO', 'Noto Sans Georgian', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+    font-family: 'Segoe UI', sans-serif;
   }
 
   html {
