--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -419,10 +419,10 @@
     animation-fill-mode: forwards;
   }
 
-  //.animate-slide-up {
-  //  animation: slide-up 0.3s ease-out forwards;
-  //  animation-fill-mode: forwards;
-  //}
+  .animate-slide-up {
+    animation: slide-up 0.3s ease-out forwards;
+    animation-fill-mode: forwards;
+  }
 
 
 }
